--- a/style.css
+++ b/style.css
@@ -4,281 +4,60 @@
     box-sizing: border-box;
 }
 
-body {
-    min-height: 500px;
+body{
+    background-color: rgb(60, 60, 60);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 80px;
 }
 
-.header2 {
-    position: relative;
-    width: 100%;
+body p{
     text-align: center;
-}
-
-.header2 img {
-    width: 100%;
-    height: 700px;
-    object-fit: cover;
-}
-
-.header2 p {
-    position: absolute;
-    font-size: 100px;
+    margin-top: 20px;
+    font-size: 25px;
+    font-family: "Jura";
     color: white;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    font-family: "Kalam";
-}
-
-.main2 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 50px;
-}
-
-.main2 p {
-    font-size: 18px;
-    max-width: 1000px;
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.klatc{
-    text-align: center;
-    font-size: 20px;
-    margin-top: 50px;
-}
-
-.kanal, .chat{
-    background-color: #989898;
-    width: 440px;
-    height: 130px;
-    border-radius: 20px;
-    padding-left: 5px;
     margin: 15px;
-   display: inline-block;
-   margin-top: 50px;
 }
 
-
-
-.kanal{
-margin-right: 160px;
-
-transition: transform 0.3s, background-color 0.3s;
-    p{
-        font-size: 30px;
-        text-align: left;
-        color: white;
-        position: absolute;
-        margin-top: -90px;
-        margin-left: 150px;
-        font-family: "Jura";
-    }
-
-    img{
-        width: 130px;
-        border-radius: 20px;
-        margin-left: -5px;
-    }
-
-    .zagol{
-        color: white;
-        font-size: 19px;
-        position: absolute;
-        margin-top: -125px;
-        margin-left: 140px;
-    }
-
-    .infotext{
-        color: #ffffff;
-        margin-top: 10px;
-    }
-
-    button {
-        background-color: #e3e3e3;
-        border-radius: 10px;
-        width: 140px;
-        height: 25px;
-        margin-left: 95px;
-        margin-top: 17px;
-        transition: background-color 0.9s; /* Smooth transition effect */
-    }
-    
-    button:hover {
-        background-color: #0084ff; /* Green color on hover */
-    }
-}
-
-.chat{
+.phone{
     transition: transform 0.3s, background-color 0.3s;
-    p{
-        font-size: 30px;
-        text-align: left;
-        color: white;
-        position: absolute;
-        margin-top: -90px;
-        margin-left: 150px;
-        font-family: "Jura";
-    }
-
-    img{
-        width: 130px;
-        border-radius: 20px;
-        margin-left: -5px;
-    }
-
-    .zagol{
-        color: white;
-        font-size: 19px;
-        position: absolute;
-        margin-top: -125px;
-        margin-left: 140px;
-    }
-
-    .infotext{
-        color: #ffffff;
-        margin-top: 10px;
-    }
-
-    button {
-        background-color: #e3e3e3;
-        border-radius: 10px;
-        width: 140px;
-        height: 25px;
-        margin-left: 95px;
-        transition: background-color 0.9s; /* Smooth transition effect */
-    }
-    
-    button:hover {
-        background-color: #0084ff; /* Green color on hover */
-    }
 }
 
-  
-  .kanal:hover {
-    transform: scale(1.1); /* Збільшує розмір на 10% */
-    background-color: #7a7a7a; /* Робить трохи темнішим */
-  }
-
-
-  .chat:hover {
-    transform: scale(1.1); /* Збільшує розмір на 10% */
-    background-color: #7a7a7a; /* Робить трохи темнішим */
-  }
-
-.slider {
-    position: relative;
-    max-width: 70%;
-    margin: auto;
-    overflow: hidden;
-    border: 2px solid #ddd;
+.PC{
+    transition: transform 0.3s, background-color 0.3s;
 }
 
-.slider-container {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
+.phone, .PC{
+width: 100px;
+height: 100px;
+border-radius: 20px;
+background-color: rgb(227, 227, 227);
+margin: 20px;
+display: inline-block;
+margin-top: 100px;
 }
 
-.slide {
-    min-width: 100%;
-    box-sizing: border-box;
+.phone, .PC, img{
+width: 100px;
 }
 
-.slide img {
-    width: 100%;
-    vertical-align: middle;
-}
-
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
+.PC img{
     padding: 10px;
-    cursor: pointer;
-    z-index: 10;
-    height: 80px;
-    
 }
 
-.prev {
-    left: 10px;
-}
-
-.next {
-    right: 10px;
-}
-
-
-
-#rotating-div {
-    background-color: #989898;
-    transition: transform 0.5s, background-color 0.5s;
-  }
-  
-  #rotating-div.hovered {
-    transform: scale(1.1);
-    background-color: #7a7a7a; /* Новий колір при наведенні */
-  }
-
-  #second-rotating-div {
-    background-color: #989898;
-    transition: transform 0.5s, background-color 0.5s;
-  }
-  
-  #second-rotating-div.hovered {
-    transform: scale(1.1);
-    background-color: #7a7a7a; /* Новий колір при наведенні */
-  }
-
-
-.perevod button{
-    width: 150px;
-    height: 30px;
-    border-radius: 10px;
-    margin: 5px;
-}
-
-
-.uamov{
-background-image: url('./media/UaFlag.png');
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-font-size: 16px;
-text-align: center;
-cursor: pointer;
-}
-.rumov {
-    background-image: url('./media/RuFlag.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    font-size: 16px;
+.baza{
     text-align: center;
-    cursor: pointer;
-    width: 100px; /* Задайте ширину і висоту кнопки, адаптуйте відповідно до потреб */
-    height: 100px;
 }
 
-    .usmov {
-        background-image: url('./media/USAFlag.png');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        font-size: 16px;
-        text-align: center;
-        cursor: pointer;
-        color: rgb(0, 0, 0);
-        border: 2px solid rgb(0, 0, 0);
-    }
+.PC:hover {
+    transform: scale(1.1); /* Збільшує розмір на 10% */
+    background-color: #00eaff; /* Робить трохи темнішим */
+  }
+
+  .phone:hover {
+    transform: scale(1.1); /* Збільшує розмір на 10% */
+    background-color: #00eaff; /* Робить трохи темнішим */
+  }
